deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parrot-deployment
  labels:
    app: parrot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parrot
  template:
    metadata:
      labels:
        app: parrot
    spec:
      containers:
        - name: parrot
          image: vregret/parrot:0.5
          ports:
            - containerPort: 80
