parrot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: parrot
  labels:
    kind:parrot
    author:Egor
spec:
  containers:
    - name: parrot
      image: vregret/parrot:0.6
      ports:
        - containerPort: 80
