task-3.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: exercise-0
  labels:
    app: exercise-postgres
spec:
  selector:
    matchLabels:
      app: db # has to match .spec.template.metadata.labels
  serviceName: "postgres"
  replicas: 2 # by default is 1
  template:
    metadata:
      labels:
        app: db # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
