postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: exercise-postgres
  namespace: exercise-02
  labels:
    name: postgres-service
spec:
  ports:
    - port: 5432
  selector:
    app: db
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: exercise-postgres
  namespace: exercise-02
  labels:
    app: exercise-postgres
spec:
  selector:
    matchLabels:
      app: db # has to match .spec.template.metadata.labels
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: db # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata-volume
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
